Fixed question box wrapping 12x12

--- a/pupil-spa/src/assets/shared-styles/elements/_virtual-keyboard.scss
+++ b/pupil-spa/src/assets/shared-styles/elements/_virtual-keyboard.scss
@@ -25,7 +25,13 @@
       padding: 0;
     }
 
-    .answer, .question {
+    .question {
+      min-width: $answer-width !important;
+      height: $answer-height !important;
+      line-height: $answer-height !important;
+    }
+
+    .answer {
       width: $answer-width !important;
       height: $answer-height !important;
       line-height: $answer-height !important;
